--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "postinstall": "npm run build",
     "start": "node server.js"
   },
+  "engines": {
+    "node": "14.17.5"
+  },
   "dependencies": {
     "@mdi/font": "^5.6.55",
     "core-js": "^3.6.5",
