--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.14.1",
-    "sass": "~1.26.11",
+    "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
     "vue-cli-plugin-vuetify": "^2.0.7",
     "vue-template-compiler": "^2.6.11",
