--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "konva": "^8.1.4",
     "roboto-fontface": "^0.10.0",
     "serve-static": "^1.14.1",
+    "typeface-roboto": "^1.1.13",
     "vue": "^2.6.11",
     "vue-konva": "^2.1.7",
     "vue-router": "^3.4.5",
