--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "roboto-fontface": "^0.10.0",
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
+    "vue-draggable-resizable": "^2.3.0",
     "vue-konva": "^2.1.7",
     "vue-router": "^3.4.5",
     "vuetify": "^2.3.10"
